# XTCRootToolsSDK

./: .gitignore  README.md  pyproject.toml  pytest.ini
XTCRoot/: exceptions.py
XTCRoot/device/: detectors.py
XTCRoot/modules/: Logging.py  __init__.py
docs/: XTCRootToolsSDK开发规范.md
resources/config/: config.json  paths.json
tests/: test_logging.py
